--- a/client/src/app/modules/dashboard/components/provision-affectation-kanban/provision-affectation-kanban.component.html
+++ b/client/src/app/modules/dashboard/components/provision-affectation-kanban/provision-affectation-kanban.component.html
@@ -12,87 +12,80 @@
         </td>
         <td>
           <select-single-employee [(model)]="employeesSelected" label="Collaborateur" [form]="kanbanForm"
-            propertyName="employeesSelected" [isMandatory]="false" [isDisabled]="false"
+            propertyName="employeesSelected" [isMandatory]="false" [isDisabled]="false" (onFormChange)="startFilter()"
             [filteredAdGroups]="[adFormalistes,adInsertions]" [addProductionDirector]="true"></select-single-employee>
-        </td>
-        <td class="fab-td-button">
-          <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="startFilter()" class="add-button">
-            <mat-icon>search</mat-icon>
-          </button>
         </td>
       </tr>
     </table>
   </div>
 </div>
 
-<div class="kanban-container top-container">
-  <div *ngFor="let status of statusSelected" class="kanban-column">
-    <h3 style="margin: 0px; text-align: center;"><span [matBadge]="status.id?getNumberOfEntitiesByStatus(status):0"
-        [matBadgeHidden]="!status.id ||getNumberOfEntitiesByStatus(status)==0" matBadgePosition="after"
-        matBadgeSize="small">{{ status.firstname + ' '+status.lastname }}</span></h3>
-  </div>
-</div>
-<ng-container *ngFor="let swimlane of swimlanes">
-  <div class="swimlane" *ngIf="swimlane.totalItems>0">
-    <h3 style="margin: 0px;">
-    </h3>
-    <div class="swimlane-header" (click)="swimlane.isCollapsed=!swimlane.isCollapsed">
-      <span>{{ swimlane.label }} ({{swimlane.totalItems}} commande{{swimlane.totalItems>1?'s':''}})</span>
-      <mat-icon [class.rotated]="!swimlane.isCollapsed">expand_more</mat-icon>
+<div class="wrapper-div wrapper-max-height">
+  <div class="kanban-container top-container">
+    <div *ngFor="let status of statusSelected" class="kanban-column">
+      <h3 style="margin: 0px; text-align: center;"><span [matBadge]="status.id?getNumberOfEntitiesByStatus(status):0"
+          [matBadgeHidden]="!status.id ||getNumberOfEntitiesByStatus(status)==0" matBadgePosition="after"
+          matBadgeSize="small">{{ status.firstname + ' '+status.lastname }}</span></h3>
     </div>
-    <div class="kanban-container" *ngIf="!swimlane.isCollapsed">
-      <div *ngFor="let status of swimlane.status" class="kanban-column">
-        <div cdkDropList [cdkDropListData]="status.entities" class="task-list"
-          [id]="'list-'+statusId.indexOf(status.label+'-' + swimlane.id + '')"
-          [cdkDropListConnectedTo]="getConnectedDropLists(swimlane)" [ngClass]="{
+  </div>
+  <ng-container *ngFor="let swimlane of swimlanes">
+    <div class="swimlane" *ngIf="swimlane.totalItems>0">
+      <h3 style="margin: 0px;">
+      </h3>
+      <div class="swimlane-header" (click)="swimlane.isCollapsed=!swimlane.isCollapsed">
+        <span>{{ swimlane.label }} ({{swimlane.totalItems}} commande{{swimlane.totalItems>1?'s':''}})</span>
+        <mat-icon [class.rotated]="!swimlane.isCollapsed">expand_more</mat-icon>
+      </div>
+      <div class="kanban-container" *ngIf="!swimlane.isCollapsed">
+        <div *ngFor="let status of swimlane.status" class="kanban-column">
+          <div cdkDropList [cdkDropListData]="status.entities" class="task-list"
+            [id]="'list-'+statusId.indexOf(status.label+'-' + swimlane.id + '')"
+            [cdkDropListConnectedTo]="getConnectedDropLists(swimlane)" [ngClass]="{
            'drop-valid': isValidDropTarget(status.label!),
            'drop-invalid': activeDraggedStatusId !== null && !isValidDropTarget(status.label!)
          }" (cdkDropListDropped)="drop($event)">
-          <div *ngFor="let order of status.entities" cdkDrag class="task-card"
-            [ngClass]="{'card-priority':order.isPriority}" (cdkDragStarted)="onDragStarted(status.id!,order)"
-            (cdkDragEnded)="onDragEnded()" (click)="fetchEntityAndOpenPanel(order)">
-            <div class="card-content">
-              <strong>{{order.affairesList}} </strong> <mat-icon color="warn"
-                *ngIf="order.isHasNotifications">notifications</mat-icon>
-              <p>{{order.servicesList}}</p>
-            </div>
-            <div class="card-footer">
-              <div class="card-ticket">
-                {{ order.id }} - {{getResponsableLabelIQuotation(order)}} - {{getTiersLabelIQuotation(order)}}
-                <br /> le {{formatDateFrance(order.createdDate)}}
+            <div *ngFor="let order of status.entities" cdkDrag class="task-card"
+              [ngClass]="{'card-priority':order.isPriority}" (cdkDragStarted)="onDragStarted(status.id!,order)"
+              (cdkDragEnded)="onDragEnded()" (click)="fetchEntityAndOpenPanel(order)">
+              <div class="card-content">
+                <strong>{{order.affairesList}} </strong> <mat-icon color="warn"
+                  *ngIf="order.isHasNotifications">notifications</mat-icon>
+                <p>{{order.servicesList}}</p>
               </div>
-              <div class="card-avatar">
-                <avatar class="avatar-select" [employee]="order.responsable?.salesEmployee" [size]="20">
-                </avatar>
-              </div>
-            </div>
-            <ng-template cdkDragPreview>
-              <div class="task-card drag-preview">
-                <div class="card-content">
-                  <strong>{{order.affairesList}} </strong>
-                  <p>{{order.servicesList}}</p>
+              <div class="card-footer">
+                <div class="card-ticket">
+                  {{ order.id }} - {{getResponsableLabelIQuotation(order)}} - {{getTiersLabelIQuotation(order)}}
+                  <br /> le {{formatDateFrance(order.productionEffectiveDateTime)}}
                 </div>
-                <div class="card-footer">
-                  <div class="card-ticket pointer" (click)="openOrder($event, order);$event.stopPropagation()">
-                    {{ order.id }}
+                <div class="card-avatar">
+                  <avatar class="avatar-select" [employee]="order.responsable?.salesEmployee" [size]="20">
+                  </avatar>
+                </div>
+              </div>
+              <ng-template cdkDragPreview>
+                <div class="task-card drag-preview">
+                  <div class="card-content">
+                    <strong>{{order.affairesList}} </strong>
+                    <p>{{order.servicesList}}</p>
+                  </div>
+                  <div class="card-footer">
+                    <div class="card-ticket pointer" (click)="openOrder($event, order);$event.stopPropagation()">
+                      {{ order.id }}
+                    </div>
                   </div>
                 </div>
-              </div>
-            </ng-template>
+              </ng-template>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</ng-container>
+  </ng-container>
 
-<div class="mat-elevation-z2 form-div ">
-  <div class=" full-width">
-    <sort-table [columns]="displayedColumns" [values]="assignationStatistics" tableName="Statistiques d'assignation"
-      [noMaxHeight]="false" [noPaddingBottom]="false" [isSmallerHeight]="false"
-      *ngIf="displayedColumns && displayedColumns.length>0 ">
-    </sort-table>
-  </div>
+  <h2>Formalités</h2>
+  <div echarts [options]="chartOptions" class="chart" style="height: 400px;"></div>
+  <h2>Insertions</h2>
+  <div echarts [options]="chartOptions2" class="chart" style="height: 400px;"></div>
 </div>
 
 <mat-menu #menu="matMenu" style="max-width: 100%;">
