--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -90,7 +90,7 @@
         <provision-kanban></provision-kanban>
       </ng-template>
     </mat-tab>
-    <mat-tab label="Affectation">
+    <mat-tab label="Affectation" *ngIf="canAddAssignOrderForProduction()">
       <ng-template matTabContent>
         <provision-affectation-kanban></provision-affectation-kanban>
       </ng-template>
