--- a/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
+++ b/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
@@ -8,18 +8,6 @@
         <i class="ai-filter me-2"></i>
         Filtrer
       </button>
-      <div ngbDropdownMenu class="dropdown-menu my-1">
-        <label class="dropdown-item" *ngFor="let scope of userScope">
-          <input class="form-check-input me-2" type="checkbox"
-            [(ngModel)]="userScopeSelected[scope.responsableViewed.id]" (change)="changeFilter()">
-          {{scope.responsableViewed.firstname+ ' '+scope.responsableViewed.lastname}}
-        </label>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" style="cursor: pointer;" (click)="selectAll(); $event.stopPropagation()">Sélectionner
-          tout</a>
-        <a class="dropdown-item" style="cursor: pointer;"
-          (click)="unselectAll(); $event.stopPropagation()">Désélectionner tout</a>
-      </div>
     </div>
 
     <div ngbDropdown class="btn-group dropdown">
@@ -30,16 +18,16 @@
       </button>
       <div ngbDropdownMenu class="dropdown-menu my-1">
         <a class="dropdown-item" style="cursor: pointer;"
-          (click)="changeSort('createdDateAsc');$event.stopPropagation();">
-          <i class="ai-time me-2"></i>
-          De la plus ancienne à la plus récente
-          <i class="ai-check me-2" *ngIf="currentSort=='createdDateAsc'"></i>
-        </a>
-        <a class="dropdown-item" style="cursor: pointer;"
           (click)="changeSort('createdDateDesc');$event.stopPropagation();">
           <i class="ai-time me-2"></i>
-          De la plus récente à la plus ancienne
+          De la plus ancienne à la plus récente
           <i class="ai-check me-2" *ngIf="currentSort=='createdDateDesc'"></i>
+        </a>
+        <a class="dropdown-item" style="cursor: pointer;"
+          (click)="changeSort('createdDateAsc');$event.stopPropagation();">
+          <i class="ai-time me-2"></i>
+          De la plus récente à la plus ancienne
+          <i class="ai-check me-2" *ngIf="currentSort=='createdDateAsc'"></i>
         </a>
         <a class="dropdown-item" style="cursor: pointer;" (click)="changeSort('byAffaire');$event.stopPropagation();">
           <i class="ai-time me-2"></i>
@@ -130,12 +118,12 @@
               </a>
 
               <a class="btn btn-sm btn-outline-primary " role="button" (click)="addToPayCb(receiptValue)"
-                *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0">
+                *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0 && receiptValue.debitAmount">
                 <i class="ai-card me-2"></i>
                 Ajouter au paiement CB
               </a>
               <a class="btn btn-sm btn-primary " role="button" (click)="removeFromPayCb(receiptValue)"
-                *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0">
+                *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0 && receiptValue.debitAmount">
                 <i class="ai-check me-2"></i>
                 Retirer du paiement CB
               </a>
@@ -208,12 +196,12 @@
                   </a>
 
                   <a class="btn btn-sm btn-outline-primary " role="button" (click)="addToPayCb(receiptValue)"
-                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0">
+                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0 && receiptValue.debitAmount">
                     <i class="ai-card me-2"></i>
                     Ajouter au paiement CB
                   </a>
                   <a class="btn btn-sm btn-primary " role="button" (click)="removeFromPayCb(receiptValue)"
-                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0">
+                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0 && receiptValue.debitAmount">
                     <i class="ai-check me-2"></i>
                     Retirer du paiement CB
                   </a>
@@ -276,12 +264,12 @@
                   </a>
 
                   <a class="btn btn-sm btn-outline-primary " role="button" (click)="addToPayCb(receiptValue)"
-                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0">
+                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0 && receiptValue.debitAmount">
                     <i class="ai-card me-2"></i>
                     Ajouter au paiement CB
                   </a>
                   <a class="btn btn-sm btn-primary " role="button" (click)="removeFromPayCb(receiptValue)"
-                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0">
+                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0 && receiptValue.debitAmount">
                     <i class="ai-check me-2"></i>
                     Retirer du paiement CB
                   </a>
