--- a/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
@@ -47,8 +47,11 @@
             <span class="fs-xs fw-semibold text-blue text-uppercase">Apostilles et légalisation</span>
           </div>
           <h2 class="h2 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons orderActionLabel="Demander une apostille ou légalisation"
-            quotationActionLabel="Demander un devis" linkLabel="Lien vers le simulateur" [isLightButtons]="false">
+          <double-buttons class="text-grey" orderActionLabel=" Demander une apostille ou légalisation"
+            [orderActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeOrder.id"
+            quotationActionLabel="Demander un devis"
+            [quotationActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeQuotation.id"
+            [isLightButtons]="true">
           </double-buttons>
         </div>
       </div>
