--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -47,8 +47,11 @@
           </div>
           <h2 class="h2 secondary-heading pb-2 pb-sm-3  ">N'attendez plus et accédez à nos
             solutions</h2>
-          <double-buttons orderActionLabel="Commander des documents" quotationActionLabel="Demander un devis"
-            [isLightButtons]="false">
+          <double-buttons class="text-grey" orderActionLabel=" Commander des documents"
+            [orderActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeOrder.id"
+            quotationActionLabel="Demander un devis"
+            [quotationActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeQuotation.id"
+            [isLightButtons]="true">
           </double-buttons>
         </div>
       </div>
