--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -158,7 +158,7 @@
                     </div>
                   </div>
 
-                  <div *ngIf=" !provision.isRedactedByJss && !isUsingTemplate" class="col-12">
+                  <div *ngIf=" !provision.isRedactedByJss && !isUsingTemplate" class="col-12 pb-5">
                     <label for="announcementTextarea" class="form-label">Texte de l'annonce</label>
                     <ckeditor id="announcementTextarea" [editor]="ckEditorHeader" [config]="config"
                       (ready)="onEditorReady($event, provision)" (change)="onNoticeChange($event, provision)">
