--- a/client/src/app/modules/miscellaneous/components/multiple-upload/multiple-upload.component.css
+++ b/client/src/app/modules/miscellaneous/components/multiple-upload/multiple-upload.component.css
@@ -15,6 +15,11 @@
   border: dashed 1px #979797;
   position: relative;
   margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.small-size {
+  height: 20px;
 }
 
 .container input {
