--- a/client/src/app/modules/dashboard/components/provision-affectation-kanban/provision-affectation-kanban.component.css
+++ b/client/src/app/modules/dashboard/components/provision-affectation-kanban/provision-affectation-kanban.component.css
@@ -57,12 +57,19 @@
 }
 
 .kanban-column {
-  width: 250px;
-  padding: 12px;
-  flex: 1 0 250px;
+  flex: 1 1 0;
+  min-width: 200px;
   max-width: 100%;
+  padding: 12px;
   background: #d7d6d6;
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+.first-column {
+  flex: 2 2 0 !important;
+  min-width: 200px;
 }
 
 .valid-drop-target {
@@ -103,19 +110,19 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  padding: 12px;
+  padding: 8px;
   margin: 8px 0;
   background-color: #fff;
   display: flex;
   flex-direction: column;
   font-size: 14px;
   cursor: grab;
-  min-height: 80px;
+  min-height: 50px;
   min-width: 150px;
 }
 
 .card-content {
-  margin-bottom: 12px;
+  margin-bottom: 6px;
 }
 
 .card-footer {
