--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -482,7 +482,7 @@
       <div class="card-body">
         <div class="d-flex flex-column flex-md-row align-items-center align-items-center mt-sm-n1 pb-4 mb-1 mb-lg-2">
           <i class="ai-wallet text-primary lead pe-1 me-2"></i>
-          <h2 class="h4 mb-0">Facturation</h2>
+          <h2 class="h4 mb-0">Facturation <span *ngIf="order && order.isGifted">- Offerte</span></h2>
           <a class="btn btn-sm btn-secondary mt-3 mt-md-0 ms-md-auto"
             *ngIf="order && invoiceSummary && displayPayButton" (click)="payCustomerOrder($event)">
             <i class="ai-cart ms-n1 me-2"></i>
