--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -37,7 +37,7 @@
 
   <section>
     <div class="pb-3 row align-items-center"
-      *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null && quotation.assoAffaireOrders[selectedAssoIndex].affaire">
+      *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null && quotation.assoAffaireOrders && quotation.assoAffaireOrders[selectedAssoIndex].affaire">
       <strong class="col-auto">
         <span>
           {{quotation.assoAffaireOrders[selectedAssoIndex].affaire.siret?(quotation.assoAffaireOrders[selectedAssoIndex].affaire.siret
@@ -48,12 +48,13 @@
           quotation.assoAffaireOrders[selectedAssoIndex].affaire.lastname) }}
           - {{quotation.assoAffaireOrders[selectedAssoIndex].affaire.address}}</span>
       </strong>
-      <a class="btn btn-secondary rounded-pill mt-2 ms-0 mt-md-3 ms-md-0 col-auto pill text-wrap text-break fs-xs">
+      <a class="btn btn-secondary rounded-pill mt-2 ms-0 mt-md-3 ms-md-0 col-auto pill text-wrap text-break fs-xs"
+        *ngIf="quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]">
         {{quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].serviceLabelToDisplay }}
       </a>
     </div>
 
-    <ng-container *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null && quotation.assoAffaireOrders[selectedAssoIndex] &&
+    <ng-container *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null && quotation.assoAffaireOrders && quotation.assoAffaireOrders[selectedAssoIndex] &&
        quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]">
       <ul ngbNav #nav="ngbNav" [activeId]="activeId" class="nav-tabs flex-nowrap"
         (navChange)="changeProvisionNoticeTemplateDesciption($event)">
