--- a/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
@@ -79,7 +79,7 @@
             quotationActionLabel="Demander un devis"
             [quotationActionRoute]="'quotation/new/'+serviceFamilyGroupAnnouncement!.id+'/'+quotationTypeQuotation.id"
             linkLabel="Consulter les annonces légales" linkRoute="announcement/search" [linkRouteToJssMedia]='true'
-            [isLightButtons]="true">
+            [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
