--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -78,7 +78,7 @@
             [orderActionRoute]="'quotation/new/'+serviceFamilyGroupFormality!.id+'/'+quotationTypeOrder.id"
             quotationActionLabel="Demander un devis"
             [quotationActionRoute]="'quotation/new/'+serviceFamilyGroupFormality!.id+'/'+quotationTypeQuotation.id"
-            [isLightButtons]="true">
+            [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
