--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -24,6 +24,10 @@
             </a>
 
             <div class="dropdown-menu dropdown-menu-end my-1 custom-drop" [ngClass]="{ show: dropdownOpen }">
+              <a class="dropdown-item" (click)="openMyJssRouteUrl('quotation/identification')">
+                <i class="fs-lg opacity-70 me-2 ai-circle-plus"></i>
+                Nouvelle commande
+              </a>
               <h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Tableau de
                 bord</h6>
               <ng-container *ngFor="let item of myAccountItems">
