--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -51,7 +51,7 @@
             [orderActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeOrder.id"
             quotationActionLabel="Demander un devis"
             [quotationActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeQuotation.id"
-            [isLightButtons]="true">
+            [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
