--- a/client-myjss/src/app/modules/tools/components/post/post.component.html
+++ b/client-myjss/src/app/modules/tools/components/post/post.component.html
@@ -362,7 +362,7 @@
       </div>
 
       <!-- Recent posts -->
-      <h4 class="pt-3 pt-lg-1 mb-4">Recents :</h4>
+      <h4 class="pt-3 pt-lg-1 mb-4">Récents :</h4>
       <ul class="list-unstyled mb-lg-5 mb-4">
         <li class="border-bottom pb-3 mb-3" *ngIf="recentPosts[0]">
           <span class="h6 mb-0">
