correct non template mode if come back from step 4 to 3

--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -110,7 +110,7 @@
                     <div
                       *ngIf="!provision.isRedactedByJss && hasOneTemplate( quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex])"
                       class="col-12 col-lg-6 form-check form-switch">
-                      <generic-toggle [(model)]="isUsingTemplate"
+                      <generic-toggle [(model)]="noticeTemplateDescription.isUsingTemplate"
                         label="Utiliser les modèles proposés pour la rédaction" [form]="informationForm"
                         [propertyName]="'isUsingTemplate'+provision.order" [isDisabled]="false"
                         (onToggleChange)="changeIsShowNoticeTemplate($event, provision.isRedactedByJss)"></generic-toggle>
@@ -157,7 +157,8 @@
                     </div>
                   </div>
 
-                  <div *ngIf=" !provision.isRedactedByJss && !isUsingTemplate" class="col-12 pb-5">
+                  <div *ngIf=" !provision.isRedactedByJss && !noticeTemplateDescription.isUsingTemplate"
+                    class="col-12 pb-5">
                     <label for="announcementTextarea" class="form-label">Texte de l'annonce</label>
                     <ckeditor id="announcementTextarea" [editor]="ckEditorHeader" [config]="config"
                       (ready)="onEditorReady($event, provision)" (change)="onNoticeChange($event, provision)">
