--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -43,12 +43,13 @@
     </mat-tab>
     <mat-tab label="Tableau des bénéficiaires effectifs"
       *ngIf="provision && provision.provisionType && provision.provisionType.code == provisionTypeRbe.code">
-      <beneficial-owner [editMode]="editMode" [affaire]="affaire"
+      <beneficial-owner [editMode]="editMode" [affaire]="affaire" [formalite]="formalite"
         (editBeneficialOwner)="handleEditBeneficialOwner($event)"></beneficial-owner>
     </mat-tab>
-    <mat-tab label="Ajout d'un bénéficiaire effectif"
+    <mat-tab label="Ajout de bénéficiaire effectif"
       *ngIf="provision && provision.provisionType && provision.provisionType.code == provisionTypeRbe.code">
-      <add-beneficial-owner #addBeneficialOwner [editMode]="editMode" [affaire]="affaire"></add-beneficial-owner>
+      <add-beneficial-owner #addBeneficialOwner [formalite]="formalite" [editMode]="editMode"
+        [affaire]="affaire"></add-beneficial-owner>
     </mat-tab>
     <mat-tab label="Options">
       <provision-options [editMode]="editMode" [provision]="provision" (provisionChange)="provisionChangeFunction()">
