--- a/client/src/app/modules/quotation/components/add-beneficial-owner/add-beneficial-owner.component.html
+++ b/client/src/app/modules/quotation/components/add-beneficial-owner/add-beneficial-owner.component.html
@@ -213,8 +213,9 @@ représentant légal de la société" [form]="addBeneficialOwnerForm"
       </td>
     </tr>
   </table>
-  <button *ngIf="editMode==true" matTooltip="Ajouter le bénéficiaire" mat-mini-fab color="warn" class="mini-fab-add"
-    (click)="addBeneficialOwner()">
+  <button *ngIf="editMode==true"
+    [matTooltip]="newBeneficialOwner.id ? 'Modifier le bénéficiaire' : 'Ajouter le bénéficiaire'" mat-mini-fab
+    color="warn" class="mini-fab-add" (click)="addBeneficialOwner()">
     <mat-icon>add</mat-icon>
   </button>
 </fieldset>
