fix qr code payment in order finalisation mail

--- a/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
+++ b/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
@@ -92,9 +92,9 @@
                 </tr>
                 <tr>
                   <td>
-                    <generic-toggle [(model)]="billingDocument.isCbLinkDisabled"
+                    <generic-toggle [(model)]="billingDocument.isQrCodePaymentDisabled"
                       label="Désactiver le QR code de paiement ?" [form]="quotationManagementForm"
-                      propertyName="isCbLinkDisabled"></generic-toggle>
+                      propertyName="isQrCodePaymentDisabled"></generic-toggle>
                   </td>
                 </tr>
               </table>
