--- a/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
+++ b/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
@@ -104,8 +104,9 @@
             </tr>
             <tr>
               <td>
-                <generic-toggle [(model)]="billingDocument.isCbLinkDisabled" label="Désactiver le QR code de paiement ?"
-                  [form]="settlementBillingForm" propertyName="isCbLinkDisabled"></generic-toggle>
+                <generic-toggle [(model)]="billingDocument.isQrCodePaymentDisabled"
+                  label="Désactiver le QR code de paiement ?" [form]="settlementBillingForm"
+                  propertyName="isQrCodePaymentDisabled"></generic-toggle>
               </td>
             </tr>
           </table>
