--- a/client/src/app/modules/quotation/components/add-incident-report/add-incident-report.component.html
+++ b/client/src/app/modules/quotation/components/add-incident-report/add-incident-report.component.html
@@ -102,10 +102,9 @@
           </tr>
           <tr>
             <td>
-              <generic-textarea [(model)]="incident.externalCommunicationDescription"
+              <generic-textarea [(model)]="incident.analysis"
                 label="Quelle analyse faites-vous des causes de l'incident ?" [form]="incidentForm"
-                propertyName="externalCommunicationDescription" [isMandatory]="false"
-                [isDisabled]="false"></generic-textarea>
+                propertyName="analysis" [isMandatory]="false" [isDisabled]="false"></generic-textarea>
             </td>
           </tr>
           <tr>
